// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceBroadcastHeader when rendering a live broadcast header with broadcast info should render the header with a live badge 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastHeader"
  >
    <div
      data-testid="member-avatar"
    >
      test user
      ,
      @user:example.com
    </div>
    <div
      class="mx_VoiceBroadcastHeader_content"
    >
      <div
        class="mx_VoiceBroadcastHeader_sender"
      >
        test user
      </div>
      <div
        class="mx_VoiceBroadcastHeader_room"
      >
        test room
      </div>
      <div
        class="mx_VoiceBroadcastHeader_line"
      >
        <div
          data-testid="icon"
        >
          type: 
          0
          , colour: 
          compound-secondary-content
        </div>
        Voice broadcast
      </div>
    </div>
    <div
      data-testid="live-badge"
    />
  </div>
</div>
`;

exports[`VoiceBroadcastHeader when rendering a non-live broadcast header should render the header without a live badge 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastHeader"
  >
    <div
      data-testid="member-avatar"
    >
      test user
      ,
      @user:example.com
    </div>
    <div
      class="mx_VoiceBroadcastHeader_content"
    >
      <div
        class="mx_VoiceBroadcastHeader_sender"
      >
        test user
      </div>
      <div
        class="mx_VoiceBroadcastHeader_room"
      >
        test room
      </div>
    </div>
  </div>
</div>
`;
